<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">乐购直播</string>
    <string name="tab_home">首页</string>
    <string name="tab_live">直播</string>
    <string name="tab_lottery">开奖</string>
    <string name="tab_betting">投注</string>
    <string name="tab_quiz">圈子</string>
    <string name="tab_mine">我的</string>
    <string name="title_home">幸运飞艇</string>
    <string name="title_notice_message">推送消息</string>
    <string name="home_next_open_winning">距离下一期开奖剩余：</string>
    <string name="home_expert_plan">专家计划</string>
    <string name="home_list_more">我是有底线滴～～</string>
    <string name="home_expert_play_recent_hit_rate">近期命中率</string>
    <string name="home_expert_play_average_odds">平均赔率</string>
    <string name="home_live_notice_attention">关注</string>
    <string name="home_profit">盈利</string>
    <string name="home_anchor_attention">关注</string>
    <string name="home_anchor_fan">粉丝</string>
    <string name="home_anchor_good_at_game">擅长彩种:</string>
    <string name="home_anchor_tag">主播标签:</string>
    <string name="home_anchor_live_date">播放时长:</string>
    <string name="home_anchor_live_open_date">开播时间:</string>
    <string name="home_live_hot">热门直播</string>
    <string name="home_live_pre">直播预告</string>
    <string name="home_expert_live">专家直播</string>
    <string name="string_live">LIVE</string>
    <string name="string_live_attention">+关注\n602086</string>
    <string name="live_tab_chat">聊天</string>
    <string name="live_tab_reward">打赏榜</string>
    <string name="live_tab_anchor">主播</string>
    <string name="live_send">发送</string>
    <string name="live_chat_edit_hint" tools:ignore="TypographyEllipsis">说点啥吧...</string>
    <string name="live_chat_send">发送</string>
    <string name="live_chat_msg_empty">暂无他人发表个人感言</string>
    <string name="live_chat_empty">请先输入内容</string>
    <string name="live_chat_online">人</string>
    <string name="live_chat_ordinary">炫酷</string>
    <string name="live_chat_confession">浪漫</string>
    <string name="live_chat_lottery_ticket">尊贵</string>
    <string name="live_chat_hint_room">进入直播间</string>
    <string name="live_chat_red_envelope_total_amount">金额</string>
    <string name="live_chat_number_of_red_packets">个数</string>
    <string name="live_chat_input_count">请填写数量</string>
    <string name="live_chat_input_money">请填写金额</string>
    <string name="live_chat_red_hint">恭喜发财</string>
    <string name="live_chat_send_red_envelope">发送红包</string>
    <string name="live_chat_red_hin_password">请输入密码</string>
    <string name="live_chat_open_red_hin">红包来了，快拆啊～</string>
    <string name="live_chat_open_red_yuan">元</string>
    <string name="live_chat_open_red_obtain">恭喜获得</string>
    <string name="live_chat_recharge_tip">余额不足，请充值！</string>
    <string name="live_chat_recharge_cancel">取消</string>
    <string name="live_chat_go_recharge">去充值</string>
    <string name="live_chat_setting_password">设置支付密码</string>
    <string name="live_chat_pay_password">支付密码</string>
    <string name="live_chat_setting_password_ok">确认密码</string>
    <string name="live_chat_ok">确认</string>
    <string name="live_chat_red_damn">哎呀</string>
    <string name="live_chat_red_damn_next">手速慢了哦，下次要加油呀!</string>
    <string name="live_anchor_room">直播间</string>
    <string name="live_anchor_dynamic">动态</string>
    <string name="live_anchor_data">资料</string>
    <string name="live_anchor_data_information">主播信息</string>
    <string name="live_anchor_gift">礼物</string>
    <string name="live_anchor_live_recording">直播记录</string>
    <string name="live_anchor_live_did_not_receive_gift">暂未收到礼物</string>
    <string name="live_anchor_live_not_receive">暂无直播记录</string>
    <string name="live_anchor_live_dynamic_create_time">发表于%1$s</string>
    <string name="live_anchor_live_not_home">主播暂时不在家~</string>
    <string name="ranking_tab_anchor">主播</string>
    <string name="ranking_tab_expert">专家</string>
    <string name="ranking_attention">+ 关注</string>
    <string name="ranking_has_attention">已关注</string>
    <string name="ranking_popularity">人气值</string>
    <string name="ranking_day_list">日榜</string>
    <string name="ranking_week_list">周榜</string>
    <string name="ranking_month_list">月榜</string>
    <string name="ranking_all_list">总榜</string>
    <string name="ranking_top_attention">关注TA</string>
    <string name="live_anchor_not_home">主播暂时不在家~</string>
    <string name="mine_user_description">这是你成为会员的第20天</string>
    <string name="mine_colored_coins">彩币</string>
    <string name="mine_watch_history">观看历史</string>
    <string name="mine_vip">VIP</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_diamond">砖石</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_concern">我的关注</string>
    <string name="mine_must">*</string>
    <string name="mine_del">删除</string>
    <string name="mine_user_feed_back">我的反馈</string>
    <string name="mine_user_feed_type">请选择反馈类型</string>
    <string name="mine_user_feed_descript">请描述您的反馈内容</string>
    <string name="mine_text_num">0/100</string>
    <string name="mine_login_des">登录后可享受更多服务</string>
    <string name="mine_login">登录/注册</string>
    <string name="mine_unlogin">您尚未登录</string>
    <string name="mine_contact_type">请填写联系方式</string>
    <string name="mine_contact_unless">请至少填写一种联系方式</string>
    <string name="mine_phone">您的手机号</string>
    <string name="mine_qq">您的QQ号</string>
    <string name="mine_emial">您的邮箱地址</string>
    <string name="mine_qq_public">QQ公众号:</string>
    <string name="mine_qq_public_num">1088808</string>
    <string name="mine_home_service">国内客服电话:</string>
    <string name="mine_home_phone">1088808</string>
    <string name="mine_broad_service">境外客服电话:</string>
    <string name="mine_broad_phone">0063 28888088</string>
    <string name="mine_watch_history_live">LIVE</string>
    <string name="mine_watch_history_enter_now">立即进入</string>
    <string name="mine_des">成为</string>
    <string name="mine_top_vip">尊贵会员</string>
    <string name="mine_check">查看特权</string>
    <string name="mine_vip_1">VIP1</string>
    <string name="mine_vip_2">VIP2</string>
    <string name="mine_vip_3">VIP3</string>
    <string name="mine_vip_4">VIP4</string>
    <string name="mine_vip_5">VIP5</string>
    <string name="mine_vip_6">VIP6</string>
    <string name="mine_wallet_money"> 账户余额( 彩币 )</string>
    <string name="mine_wallet_count"> 86500</string>
    <string name="mine_wallet_count_out"> 8650.00</string>
    <string name="mine_wallet_recharge"> 我要充值</string>
    <string name="mine_wallet_cash_out"> 我要提款</string>
    <string name="mine_invest">充值</string>
    <string name="mine_invest_out">充值提现</string>
    <string name="mine_cash_out_lest"> 最低100元起提</string>
    <string name="mine_cash_out_all">全部提现</string>
    <string name="mine_wallet_cash_out_count"> 提现金额</string>
    <string name="mine_wallet_money_type"> ￥</string>
    <string name="mine_balances">余额</string>
    <string name="mine_invest_money">请选择充值金额</string>
    <string name="mine_setting">设置</string>
    <string name="mine_invest_money_12">12</string>
    <string name="mine_invest_money_30">30</string>
    <string name="mine_invest_money_64">64</string>
    <string name="mine_invest_money_128">128</string>
    <string name="mine_invest_money_300">300</string>
    <string name="mine_invest_money_648">648</string>
    <string name="mine_invest_money_1280">1280</string>
    <string name="mine_invest_money_3000">3000</string>
    <string name="mine_invest_money_5000">5000</string>
    <string name="mine_invest_money_other">其它金额</string>
    <string name="mine_invest_money_120_coin">120彩币</string>
    <string name="mine_invest_money_300_coin">300彩币</string>
    <string name="mine_invest_money_640_coin">640彩币</string>
    <string name="mine_invest_money_1280_coin">1280彩币</string>
    <string name="mine_invest_money_3000_coin">3000彩币</string>
    <string name="mine_invest_money_6480_coin">6480彩币</string>
    <string name="mine_invest_money_12800_coin">12800彩币</string>
    <string name="mine_invest_money_30000_coin">30000彩币</string>
    <string name="mine_invest_money_50000_coin">50000彩币</string>
    <string name="mine_invest_money_type">请选择支付方式</string>
    <string name="mine_invest_card_num">6217****4666</string>
    <string name="mine_invest_zfb">支付宝</string>
    <string name="mine_invest_wx">微信</string>
    <string name="mine_invest_now">立即充值</string>
    <string name="mine_invest_read">阅读并同意</string>
    <string name="mine_invest_read_text">《充值服务协议》</string>
    <string name="mine_invest_tips">温馨提示</string>
    <string name="mine_invest_tips_1">1.提取最低金额为一千彩币</string>
    <string name="mine_invest_tips_2">2.价值比例: 1元=10彩币</string>
    <string name="mine_app">彩票宝APP</string>
    <string name="mine_app_setting">应用设置</string>
    <string name="mine_app_safe">安全中心</string>
    <string name="mine_app_help">帮助中心</string>
    <string name="mine_app_net">网络诊断</string>
    <string name="mine_app_about">关于我们</string>
    <string name="mine_app_out">退出登录</string>
    <string name="mine_app_ver">版本：1.10</string>
    <string name="mine_app_net_check">诊断中可能需要等待1到2分钟</string>
    <string name="mine_app_dns">DNS解析</string>
    <string name="mine_app_ping">PING测试</string>
    <string name="mine_app_lu">路由测试</string>
    <string name="mine_app_info">应用简介</string>
    <string name="mine_app_no">免责申明</string>
    <string name="mine_app_ver_check">版本检测</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_info">幸运飞艇是一款由香港皇家科技自主研发的高频彩数据应用；   应用以实用、方便、快捷为特色，运用自主分析算法，率先实现了幸运飞艇各玩法的精确分析。  应用内包含免费推荐、两面露珠、视频直播、今日号码、两面长龙等各种功能玩法于一体，使您在参与幸运飞艇游戏时分析更精准，让您轻松玩转飞艇。</string>
    <string name="mine_about_info">
                            幸运飞艇软件是本公司研发的一款统计资讯推荐数据的应用，此应用仅供中国大陆购买官方彩票进行相关的参考，对于使用本应用出现的任何问题，本公司不承担责任。本“软件”由本公司开发，非经本公司或者本公司授权开发，并发布的其他任何由本"软件"衍生的软件均属非法，下载、安装、使用此类软件，将可能导致不可预知的风险，由此产生的一切法律责任与任何纠纷一概与本公司无关。
用户必须留意本身所处之地区及相关法律，不得利用本软件进行任何非法活动，任何情况下导致触犯所属地区之法律，用户须自行承担责任，一切后果本公司概不责。
                        </string>
    <string name="mine_app_num">1088088</string>
    <string name="mine_app_qq">QQ公众号</string>
    <string name="mine_app_phone">国内客服电话</string>
    <string name="mine_app_phone_abord">境外客服电话</string>
    <string name="mine_safe_setting">安全设置</string>
    <string name="mine_edit_password">修改登录密码</string>
    <string name="mine_edit_pay_password">修改支付密码</string>
    <string name="mine_edit_phone">更换手机号</string>
    <string name="mine_edit_email">绑定邮箱</string>
    <string name="mine_bind">立即绑定</string>
    <string name="mine_password">填写新密码</string>
    <string name="mine_write_password">请输入支付密码</string>
    <string name="mine_confirm_password">确认支付密码</string>
    <string name="mine_modify_password">修改密码</string>
    <string name="mine_confirm_user">请输入支付密码验证身份</string>
    <string name="mine_modify_phone_num">更换手机号</string>
    <string name="mine_identify_code">请输入验证码</string>
    <string name="mine_get_identify_code">获取手机验证</string>
    <string name="mine_save">保存</string>
    <string name="mine_user_name">用户名:</string>
    <string name="mine_user_sex">性别:</string>
    <string name="mine_user_sign">个性签名:</string>
    <string name="mine_user_sign_edit">请输入您的个性签名</string>
    <string name="mine_sign_num">0/50</string>
    <string name="mine_edit_name">请输入用户名</string>
    <string name="mine_edit_sex">男</string>
    <string name="mine_choose_card">请选择银行卡</string>
    <string name="mine_submit">提交</string>
    <string name="mine_card_address">开户城市</string>
    <string name="mine_card_number">卡号</string>
    <string name="mine_card_address_edit">请选择您的开户城市</string>
    <string name="mine_card_number_edit">请输入您的银行卡号</string>
    <string name="mine_diamond_change">钻石兑换</string>
    <string name="mine_diamond_balance">余额:</string>
    <string name="mine_diamond_scale">兑换比例1:10</string>
    <string name="mine_diamond_all">全部兑换</string>
    <string name="mine_diamond_edit">请输入兑换金额</string>
    <string name="mine_diamond_change_">兑换</string>
</resources>