<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/imgSetPhoto"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_36">

        <ImageView
            android:id="@+id/imgUserPhoto"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:background="@mipmap/ic_mine_base_user"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/ic_mine_camera"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_52"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/mine_user_name"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14" />

    <com.fenghuang.baselib.widget.round.RoundRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_36"
        app:rv_backgroundColor="@color/color_f6f6f6"
        app:rv_cornerRadius="@dimen/dp_5">

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/mine_edit_name"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_8"
            android:textSize="@dimen/sp_14" />

    </com.fenghuang.baselib.widget.round.RoundRelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_52"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/mine_user_sex"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14" />

    <com.fenghuang.baselib.widget.round.RoundRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_36"
        app:rv_backgroundColor="@color/color_f6f6f6"
        app:rv_cornerRadius="@dimen/dp_5">

        <EditText
            android:id="@+id/edUserSex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/mine_edit_sex"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_8"
            android:textSize="@dimen/sp_14" />

    </com.fenghuang.baselib.widget.round.RoundRelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_52"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/mine_user_sign"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14" />

    <com.fenghuang.baselib.widget.round.RoundRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_105"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_34"
        app:rv_backgroundColor="@color/color_f6f6f6"
        app:rv_cornerRadius="@dimen/dp_5">

        <EditText
            android:id="@+id/publish_ed_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/dp_12"
            android:paddingTop="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:gravity="start"
            android:background="@null"
            android:hint="@string/mine_user_sign_edit"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/publish_text_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_10"
            android:hint="@string/mine_sign_num"
            android:textColorHint="@color/color_CCCCCC"
            android:textSize="@dimen/sp_10" />

    </com.fenghuang.baselib.widget.round.RoundRelativeLayout>


    <com.fenghuang.baselib.widget.round.RoundTextView
        android:id="@+id/btUpLoadUserInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginStart="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/mine_save"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:rv_backgroundColor="@color/color_FF513E"
        app:rv_cornerRadius="@dimen/dp_23" />
</LinearLayout>