<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mine_choose_card" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spCard"
                style="@style/common_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_26"
                android:dropDownVerticalOffset="@dimen/dp_24"
                android:popupTheme="@style/common_spinner"
                app:theme="@style/common_spinner"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_f5f5f5" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:id="@+id/tvSecond"
            android:layout_width="@dimen/dp_66"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mine_card_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_toEndOf="@+id/tvSecond"
            android:background="@null"
            android:hint="@string/mine_card_address_edit"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_f5f5f5" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:id="@+id/tvThird"
            android:layout_width="@dimen/dp_66"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mine_card_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_toEndOf="@+id/tvThird"
            android:background="@null"
            android:hint="@string/mine_card_number_edit"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_f5f5f5" />
    </RelativeLayout>


    <com.fenghuang.baselib.widget.round.RoundTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginStart="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/mine_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:rv_backgroundColor="@color/color_FF513E"
        app:rv_backgroundPressColor="@color/color_FF513E"
        app:rv_cornerRadius="@dimen/dp_23" />
</LinearLayout>