<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fenghuang.baselib.widget.round.RoundLinearLayout
        android:layout_width="@dimen/dp_316"
        android:layout_height="@dimen/dp_238"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rv_backgroundColor="@color/white"
        app:rv_cornerRadius="@dimen/dp_12">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/mine_diamond_change"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_dialog_close" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_36"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgHead"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@mipmap/ic_dialog_money"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tvShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_toEndOf="@+id/imgHead"
                android:text="@string/mine_diamond_balance"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_toEndOf="@+id/tvShow"
                android:text="￥896.34"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dp_6"
                android:gravity="center"
                android:text="@string/mine_diamond_scale"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_12"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


        <com.fenghuang.baselib.widget.round.RoundRelativeLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_36"
            app:rv_backgroundColor="@color/color_f6f6f6"
            app:rv_cornerRadius="@dimen/dp_5">

            <EditText
                android:id="@+id/etChangeMoney"
                android:layout_width="@dimen/dp_170"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="numberDecimal"
                android:paddingStart="@dimen/dp_10"
                android:text="@string/mine_diamond_edit"
                android:textSize="@dimen/sp_14"
                tools:ignore="Autofill,RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/etChangeMoney"
                android:gravity="center"
                android:text="@string/mine_diamond_all"
                android:textColor="@color/color_FF3F30"
                android:textSize="@dimen/sp_14" />

        </com.fenghuang.baselib.widget.round.RoundRelativeLayout>


        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@+id/tvConfirmChange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_marginEnd="@dimen/dp_36"
            android:gravity="center"
            android:text="@string/mine_diamond_change_"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:rv_backgroundColor="@color/color_FF3F30"
            app:rv_cornerRadius="@dimen/dp_40" />
    </com.fenghuang.baselib.widget.round.RoundLinearLayout>

</RelativeLayout>