<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <com.fenghuang.baselib.widget.round.RoundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_26"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:rv_backgroundColor="@color/color_f1eff0"
        app:rv_backgroundPressColor="@color/color_f1eff0"
        app:rv_cornerRadius="@dimen/dp_26">

        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@id/tvDayList"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranking_day_list"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_12"
            app:rv_backgroundColor="@color/color_CAAB8B"
            app:rv_backgroundPressColor="@color/color_CAAB8B"
            app:rv_cornerRadius="@dimen/dp_26" />

        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@id/tvWeekList"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranking_week_list"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_12"
            app:rv_cornerRadius="@dimen/dp_26" />

        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@id/tvMonthList"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranking_month_list"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_12"
            app:rv_backgroundColor="@color/color_f1eff0"
            app:rv_backgroundPressColor="@color/color_CAAB8B"
            app:rv_cornerRadius="@dimen/dp_26" />

        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@id/tvAllList"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ranking_all_list"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_12"
            app:rv_backgroundColor="@color/color_f1eff0"
            app:rv_backgroundPressColor="@color/color_CAAB8B"
            app:rv_cornerRadius="@dimen/dp_26" />
    </com.fenghuang.baselib.widget.round.RoundLinearLayout>

</LinearLayout>